# pdm_wbdesigner

./: .env.example  .gitignore  Procfile  README.md  gunicorn.conf.py  pdm_one.code-workspace  pyproject.toml
.github/ISSUE_TEMPLATE/: backlog-item.md
entrypoints/: main.py
entrypoints/templates/home/: index.html
entrypoints/views/: account.py  designer.py  home.py
pdm_project_one/: __init__.py  gunicorn.conf.py  image.py  image_tools.py  main.py  program.py  settings.py
pdm_project_one/api/: main.py  viewmodels.py  views.py
pdm_project_one/entrypoints/: main.py
pdm_project_one/program/: program.py
pdm_project_one/views/: home.py
server/nginx/: wbdesigner.nginx
server/scripts/: server_setup.sh
server/units/: wbdesigner.service
templates/designer/: designer.pt  multiform.pt  output.pt
templates/home/: index.pt
templates/shared/: _layout.pt  _test.pt  index.html
tests/: test_pdm_project_one.py
