[tool.poetry]
name = "pdm_project_one"
version = "0.1.0"
description = "Wristband Designer"
authors = ["Andrew McPhail <andrew@studiofriday.co.za>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.1.2"
jupyter = "^1.0.0"
python-decouple = "^3.4"
fastapi = "ic0.63.0"
uvicorn = "^0.13.4"
Chameleon = "^3.9.0"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"
uvloop = "^0.15.2"
httptools = "^0.1.1"
httpie = "^2.4.0"
glances = "^3.1.6"

fastapi-chameleon = { git = "https://github.com/mikeckennedy/fastapi-chameleon.git", branch = "main"}
greenlet = "1.0.0"
gevent = "21.1.2"
nest-asyncio = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wbimg = "pdm_project_one.library.program:main"
fastrun = "pdm_project_one.api.main:main"
